@@ -414,55 +414,6 @@ name|VAL_EXPLICIT
 init|=
 literal|"__VAL_EXPLICIT__"
 decl_stmt|;
-comment|/**    * Returns the default operator for use by Query Parsers, parsed from the df string    * @param notUsed is not used, but is there for back compat with 3rd party QParsers    * @param df the df string from request    * @deprecated this method is here purely not to break code back compat in 7.x    */
-annotation|@
-name|Deprecated
-DECL|method|getQueryParserDefaultOperator
-specifier|public
-specifier|static
-name|QueryParser
-operator|.
-name|Operator
-name|getQueryParserDefaultOperator
-parameter_list|(
-specifier|final
-name|IndexSchema
-name|notUsed
-parameter_list|,
-specifier|final
-name|String
-name|df
-parameter_list|)
-block|{
-return|return
-name|parseOP
-argument_list|(
-name|df
-argument_list|)
-return|;
-block|}
-comment|/**    * Returns the effective default field based on the 'df' param.    * TODO: This is kept for 3rd party QParser compat in 7.x. Remove this method in Solr 8.0    * @param ignored Not in use    * @param df the default field, which will be returned as-is    * @see org.apache.solr.common.params.CommonParams#DF    * @deprecated IndexScema does not contain defaultField anymore, you must rely on df alone    */
-annotation|@
-name|Deprecated
-DECL|method|getDefaultField
-specifier|public
-specifier|static
-name|String
-name|getDefaultField
-parameter_list|(
-specifier|final
-name|IndexSchema
-name|ignored
-parameter_list|,
-specifier|final
-name|String
-name|df
-parameter_list|)
-block|{
-return|return
-name|df
-return|;
-block|}
 comment|/**    * @param txt Text to parse    * @param start Index into text for start of parsing    * @param target Object to inject with parsed settings    * @param params Additional existing parameters    */
 DECL|method|parseLocalParams
 specifier|public
