@@ -216,20 +216,6 @@ name|apache
 operator|.
 name|lucene
 operator|.
-name|index
-operator|.
-name|IndexableField
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|lucene
-operator|.
 name|search
 operator|.
 name|BooleanClause
@@ -333,34 +319,6 @@ operator|.
 name|search
 operator|.
 name|Sort
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|common
-operator|.
-name|SolrDocument
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|solr
-operator|.
-name|common
-operator|.
-name|SolrDocumentList
 import|;
 end_import
 
@@ -5202,252 +5160,6 @@ return|return
 literal|true
 return|;
 block|}
-block|}
-comment|/**    * Convert a DocList to a SolrDocumentList    *    * The optional param "ids" is populated with the lucene document id    * for each SolrDocument.    *    * @param docs The {@link org.apache.solr.search.DocList} to convert    * @param searcher The {@link org.apache.solr.search.SolrIndexSearcher} to use to load the docs from the Lucene index    * @param fields The names of the Fields to load    * @param ids A map to store the ids of the docs    * @return The new {@link org.apache.solr.common.SolrDocumentList} containing all the loaded docs    * @throws java.io.IOException if there was a problem loading the docs    * @since solr 1.4    * @deprecated TODO in 7.0 remove this. It was inlined into ClusteringComponent. DWS: 'ids' is ugly.    */
-DECL|method|docListToSolrDocumentList
-specifier|public
-specifier|static
-name|SolrDocumentList
-name|docListToSolrDocumentList
-parameter_list|(
-name|DocList
-name|docs
-parameter_list|,
-name|SolrIndexSearcher
-name|searcher
-parameter_list|,
-name|Set
-argument_list|<
-name|String
-argument_list|>
-name|fields
-parameter_list|,
-name|Map
-argument_list|<
-name|SolrDocument
-argument_list|,
-name|Integer
-argument_list|>
-name|ids
-parameter_list|)
-throws|throws
-name|IOException
-block|{
-comment|/*  DWS deprecation note:      It's only called by ClusteringComponent, and I think the "ids" param aspect is a bit messy and not worth supporting.      If someone wants a similar method they can speak up and we can add a method to SolrDocumentFetcher.      */
-name|IndexSchema
-name|schema
-init|=
-name|searcher
-operator|.
-name|getSchema
-argument_list|()
-decl_stmt|;
-name|SolrDocumentList
-name|list
-init|=
-operator|new
-name|SolrDocumentList
-argument_list|()
-decl_stmt|;
-name|list
-operator|.
-name|setNumFound
-argument_list|(
-name|docs
-operator|.
-name|matches
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|list
-operator|.
-name|setMaxScore
-argument_list|(
-name|docs
-operator|.
-name|maxScore
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|list
-operator|.
-name|setStart
-argument_list|(
-name|docs
-operator|.
-name|offset
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|DocIterator
-name|dit
-init|=
-name|docs
-operator|.
-name|iterator
-argument_list|()
-decl_stmt|;
-while|while
-condition|(
-name|dit
-operator|.
-name|hasNext
-argument_list|()
-condition|)
-block|{
-name|int
-name|docid
-init|=
-name|dit
-operator|.
-name|nextDoc
-argument_list|()
-decl_stmt|;
-name|Document
-name|luceneDoc
-init|=
-name|searcher
-operator|.
-name|doc
-argument_list|(
-name|docid
-argument_list|,
-name|fields
-argument_list|)
-decl_stmt|;
-name|SolrDocument
-name|doc
-init|=
-operator|new
-name|SolrDocument
-argument_list|()
-decl_stmt|;
-for|for
-control|(
-name|IndexableField
-name|field
-range|:
-name|luceneDoc
-control|)
-block|{
-if|if
-condition|(
-literal|null
-operator|==
-name|fields
-operator|||
-name|fields
-operator|.
-name|contains
-argument_list|(
-name|field
-operator|.
-name|name
-argument_list|()
-argument_list|)
-condition|)
-block|{
-name|SchemaField
-name|sf
-init|=
-name|schema
-operator|.
-name|getField
-argument_list|(
-name|field
-operator|.
-name|name
-argument_list|()
-argument_list|)
-decl_stmt|;
-name|doc
-operator|.
-name|addField
-argument_list|(
-name|field
-operator|.
-name|name
-argument_list|()
-argument_list|,
-name|sf
-operator|.
-name|getType
-argument_list|()
-operator|.
-name|toObject
-argument_list|(
-name|field
-argument_list|)
-argument_list|)
-expr_stmt|;
-block|}
-block|}
-if|if
-condition|(
-name|docs
-operator|.
-name|hasScores
-argument_list|()
-operator|&&
-operator|(
-literal|null
-operator|==
-name|fields
-operator|||
-name|fields
-operator|.
-name|contains
-argument_list|(
-literal|"score"
-argument_list|)
-operator|)
-condition|)
-block|{
-name|doc
-operator|.
-name|addField
-argument_list|(
-literal|"score"
-argument_list|,
-name|dit
-operator|.
-name|score
-argument_list|()
-argument_list|)
-expr_stmt|;
-block|}
-name|list
-operator|.
-name|add
-argument_list|(
-name|doc
-argument_list|)
-expr_stmt|;
-if|if
-condition|(
-name|ids
-operator|!=
-literal|null
-condition|)
-block|{
-name|ids
-operator|.
-name|put
-argument_list|(
-name|doc
-argument_list|,
-operator|new
-name|Integer
-argument_list|(
-name|docid
-argument_list|)
-argument_list|)
-expr_stmt|;
-block|}
-block|}
-return|return
-name|list
-return|;
 block|}
 DECL|method|invokeSetters
 specifier|public
